--- a/index.html
+++ b/index.html
@@ -14,3 +14,4 @@ layout: base
 </td>
 </tr>
 </table>
+<p>For information on our design process, <a href="design.html" alt="design">click here</a>.</p>
