updated some image extensions
Image extensions on 2 images were .JPG, not .jpg so they were updated

--- a/design.html
+++ b/design.html
@@ -33,7 +33,7 @@ layout: base
 <p>Each of us was tasked with creating page tables for the pages on the site and here are some examples of those tables. The page tables represent what we thought were the most important elements prioritized by importance. Home page table.</p>
 </td>
 <td>
-<figure><img src="images/homepagetable.jpg" alt="home page table" height="300"></figure>
+<figure><img src="images/homepagetable.JPG" alt="home page table" height="300"></figure>
 </td>
 </tr>
 <tr>
@@ -41,7 +41,7 @@ layout: base
 <p>This is the tutorial page table created by Katherine.</p>
 </td>
 <td>
-<figure><img src="images/tutorialpagetable.jpg" alt="tutorial page table" height="300"></figure>
+<figure><img src="images/tutorialpagetable.JPG" alt="tutorial page table" height="300"></figure>
 </td>
 </tr>
 <tr>
@@ -49,7 +49,7 @@ layout: base
 <p>This is the faq page table created by Danielle.</p>
 </td>
 <td>
-<figure><img src="images/faqpagetable.jpg" alt="faq page table" height="300"></figure>
+<figure><img src="images/faqpagetable.JPG" alt="faq page table" height="300"></figure>
 </td>
 </tr>
 <tr>
