updated formatting of wide compilation image
updated formatting of wide compilation image

--- a/design.html
+++ b/design.html
@@ -21,10 +21,11 @@ layout: base
 </td>
 </tr>
 <tr>
-<td>
+<td colspan="2">
 <p>Since as a group we had created a homepage in the mockup, we each took on individual pages for our individual html assignment, creating the content for what would become our microsite. Putting together these individual pages, we then chose which design to move forward with. We chose Karla's design because she used most of the elements that aligned with our individual designs on one page: nav bar, side bar, color scheme, prominent graphic image.</p>
-</td>
-<td>
+</td></tr>
+<tr>
+<td colspan="2">
 <figure><img src="images/indivcompilation.jpg" alt="individual html compilations" height="300"></figure>
 </td>
 </tr>
