updated spelling on mockup image
Updated misspelling on mockup image

--- a/design.html
+++ b/design.html
@@ -17,7 +17,7 @@ layout: base
 <p>Using the common elements from our mockups, we narrowed the process to this mockup over the next few weeks choosing the persona of a student with casual language, but adding in an element for faculty because we did not believe only one persona would use the site.</p>
 </td>
 <td>
-<figure><img src="images/groupb_mockup.jpg" alt="mockup" height="300"></figure>
+<figure><img src="images/groupb_mockupblue.jpg" alt="mockup" height="300"></figure>
 </td>
 </tr>
 <tr>
