changed size limits on some images
Updated height=300 to be width=515 on page table images because texts were displaying too small to read

--- a/design.html
+++ b/design.html
@@ -34,7 +34,7 @@ layout: base
 <p>Each of us was tasked with creating page tables for the pages on the site and here are some examples of those tables. The page tables represent what we thought were the most important elements prioritized by importance. Home page table.</p>
 </td>
 <td>
-<figure><img src="images/homepagetable.JPG" alt="home page table" height="300"></figure>
+<figure><img src="images/homepagetable.JPG" alt="home page table" width="515"></figure>
 </td>
 </tr>
 <tr>
@@ -42,7 +42,7 @@ layout: base
 <p>This is the tutorial page table created by Katherine.</p>
 </td>
 <td>
-<figure><img src="images/tutorialpagetable.JPG" alt="tutorial page table" height="300"></figure>
+<figure><img src="images/tutorialpagetable.JPG" alt="tutorial page table" width="515"></figure>
 </td>
 </tr>
 <tr>
@@ -50,7 +50,7 @@ layout: base
 <p>This is the faq page table created by Danielle.</p>
 </td>
 <td>
-<figure><img src="images/faqpagetable.JPG" alt="faq page table" height="300"></figure>
+<figure><img src="images/faqpagetable.JPG" alt="faq page table" width="515"></figure>
 </td>
 </tr>
 <tr>
@@ -58,7 +58,7 @@ layout: base
 <p>This is the faculty page table created by April.</p>
 </td>
 <td>
-<figure><img src="images/facultypagetable.jpg" alt="faculty page table" height="300"></figure>
+<figure><img src="images/facultypagetable.jpg" alt="faculty page table" width="515"></figure>
 </td>
 </tr>
 <tr>
@@ -66,7 +66,7 @@ layout: base
 <p>This is the appointment page table created by Karla.</p>
 </td>
 <td>
-<figure><img src="images/apptpagetable.jpg" alt="appointment page table" height="300"></figure>
+<figure><img src="images/apptpagetable.jpg" alt="appointment page table" width="515"></figure>
 </td>
 </tr>
 </table>
