--- a/tutorial.html
+++ b/tutorial.html
@@ -16,8 +16,8 @@ layout: base
 
         <h3>Step 2: Specifications</h3>
         <ul>
-          <li> If Student or faculty member has saved or printed object, and is unable to print immediately, items should be saved
-            on their own computer.</li>
+          <li> Models created in the Media Center can be printed immedialtely when time allots. If students or faculty are unable to print, files will be saved 
+             on Media Center computers as soon as possible. Email confirmations will be sent when objects are ready for pickup.</li>         
           <li>All printing requests must be sent to mediacenter@dom.edu</li>
           <li>Please allow five days for processing</li>
           <li>Dominican's Media Center specifies 3D objects "must not exceeed 9 inches across, 6 inches deep, and 5.7 inches
