--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@ layout: base
 <table>
 <tr>
 <td>
-<p>If this is your first time here, check out the FAQ page to discover what 3D printing is and what options are available for our printer. If you're familiar with 3D printing, check out the Tutorial page for a guide on how to print your image. If you are looking for info on how to integrate 3D printing into your classroom, checkout the Faculty page. If you are ready to print, click on our Appointment page to reserve your time.</p>
-<p>Dominican University is located at 7900 West Division St., River Forest, IL 60305. The 3D printing lab is located in the Media Center of the Rebecca Crown Library.</p>
+<p>If this is your first time here, check out the <a href="fAq.html" alt="faq">FAQ</a> page to discover what 3D printing is and what options are available for our printer. If you're familiar with 3D printing, check out the <a href="tutorial.html" alt="tutorial">Tutorial</a> page for a guide on how to print your image. If you are looking for info on how to integrate 3D printing into your classroom, checkout the <a href="faculty.html" alt="faculty">Faculty</a> page. If you are ready to print, click on our <a href="makeanappointment.html" alt="appt">Appointment</a> page to reserve your time.</p>
+  <p><a href="http://www.dom.edu/" alt="Dominican University website" target="_new">Dominican University</a> is located at <a href="https://goo.gl/maps/xwoiWs8G5c42" alt="map">7900 West Division St., River Forest, IL 60305</a>. The 3D printing lab is located in the Media Center of the Rebecca Crown Library.</p>
 </td>
 <td>
 <figure><img src="https://libapps.s3.amazonaws.com/accounts/13369/images/bluerobot.JPG" alt="student project blue robot" height="300"></figure>
