Add correct pdf path

--- a/design.html
+++ b/design.html
@@ -34,8 +34,7 @@ layout: base
 <p>Each of us was tasked with creating page tables for the pages on the site and here are some examples of those tables. The page tables represent what we thought were the most important elements prioritized by importance. Home page table.</p>
 </td>
 <td>
-<figure><a href="homepage_table.pdf><img src="images/homepagetable.JPG" alt="home page table" width="515"></a></figure>
-<figcaption class="figure-caption text-center">Click on thumbnail to expand</figcaption>
+<figure><a href="images/homepage_table.pdf><img src="images/homepagetable.JPG" alt="home page table" width="515"></a></figure>
 </td>
 </tr>
 <tr>
