--- a/design.html
+++ b/design.html
@@ -34,7 +34,7 @@ layout: base
 <p>Each of us was tasked with creating page tables for the pages on the site and here are some examples of those tables. The page tables represent what we thought were the most important elements prioritized by importance. Home page table.</p>
 </td>
 <td>
-<figure><a href="images/homepage_table.pdf><img src="images/homepagetable.JPG" alt="home page table" width="515"></a></figure>
+<figure><a href="images/homepage_table.pdf"><img src="images/homepagetable.JPG" alt="home page table" width="515"></a></figure>
 </td>
 </tr>
 <tr>
