Changed PDF path

--- a/design.html
+++ b/design.html
@@ -70,7 +70,7 @@ layout: base
 <p>This is the appointment page table created by Karla.</p>
 </td>
 <td>
-<figure><a href="Make_an_appointment_Karla.pdf" title="FAQ Page Table PDF" window="_self"><img src="images/make_appointment_Karla.png" alt="Make an Appointment Page Table PDF" width="60%"></a></figure>
+<figure><a href="Make_appointment_Karla.pdf" title="FAQ Page Table PDF" window="_self"><img src="images/make_appointment_Karla.png" alt="Make an Appointment Page Table PDF" width="60%"></a></figure>
 <figcaption class="figure-caption text-center">Make an Appointment Page Table<br/> Click on thumbnail to expand</figcaption>
 </td>
 </tr>
