--- a/design.html
+++ b/design.html
@@ -33,7 +33,7 @@ layout: base
 <td>
 <p>Each of us was tasked with creating page tables for the pages on the site and here are some examples of those tables. The page tables represent what we thought were the most important elements prioritized by importance. Home page table.</p>
 </td>
-<td>
+<td align="center">
 <figure><a href="images/homepage_table.pdf" title="Homepage Table PDF" window="_self"><img src="images/homepage_table.png" alt="Homepage Table" width="80%" border="1px"></a></figure>
 <figcaption class="figure-caption text-center">Homepage Table <br/> Click on thumbnail to expand</figcaption>
 </td>
@@ -42,7 +42,7 @@ layout: base
 <td>
 <p>This is the tutorial page table created by Katherine.</p>
 </td>
-<td>
+<td align="center">
 <figure><a href="images/printing_tutorial_Katherine.pdf" title="Printing Tutorial Table PDF" window="_self"><img src="images/printing_tutorial_Katherine.png" alt="Printing Tutorial Page Table" width="80%" border="1px"></figure>
 <figcaption class="figure-caption text-center">Printing Tutorial Page Table <br/> Click on thumbnail to expand</figcaption>
 </td>
@@ -51,7 +51,7 @@ layout: base
 <td>
 <p>This is the FAQ page table created by Danielle.</p>
 </td>
-<td>
+<td align="center">
 <figure><a href="images/faq_Danielle.pdf" title="FAQ Page Table PDF" window="_self"><img src="images/faq_Danielle.png" alt="FAQ Page Table PDF" width="80%" border="1px"></a></figure>
 <figcaption class="figure-caption text-center">FAQ Page Table<br/> Click on thumbnail to expand</figcaption>
 </td>
@@ -60,7 +60,7 @@ layout: base
 <td>
 <p>This is the faculty page table created by April.</p>
 </td>
-<td>
+<td align="center">
 <figure><img src="images/facultypagetable.jpg" alt="Faculty Page Table" width="80%" border="1px"></figure>
 <figcaption class="figure-caption text-center">Faculty Page Table<br/> Click on thumbnail to expand</figcaption>
 </td>
@@ -69,7 +69,7 @@ layout: base
 <td>
 <p>This is the appointment page table created by Karla.</p>
 </td>
-<td>
+<td align="center">
 <figure><a href="Make_appointment_Karla.pdf" title="FAQ Page Table PDF" window="_self"><img src="images/make_appointment_Karla.png" alt="Make an Appointment Page Table PDF" width="80%" border="1px"></a></figure>
 <figcaption class="figure-caption text-center">Make an Appointment Page Table<br/> Click on thumbnail to expand</figcaption>
 </td>
