--- a/design.html
+++ b/design.html
@@ -51,7 +51,7 @@ layout: base
 </tr>
 <tr>
 <td>
-<p>This is the FAQ page table created by Danielle.</p>
+<p>This is the FAQ page table created by Danielle. Initial priority 1 was achieved- page has list of questions and links to # on page for answer. Priority 2- live help was postponed due to time constraints in coding. Priority 3- common nav bar completed using Jekyll layout. Priority 4- hours completed, located in footer</p>
 </td>
   <td>
 <figure><a href="images/faq_Danielle.pdf" title="FAQ Page Table PDF"><img src="images/faq_Danielle.png" alt="FAQ Page Table PDF" width="400"></a>
