--- a/design.html
+++ b/design.html
@@ -22,7 +22,7 @@ layout: base
 </tr>
 <tr>
 <td colspan="2">
-<p>Since as a group we had created a homepage in the mockup, we each took on individual pages for our individual html assignment, creating the content for what would become our microsite. Putting together these individual pages, we then chose which design to move forward with. We chose Karla's design because she used most of the elements that aligned with our individual designs on one page: nav bar, side bar, color scheme, prominent graphic image.</p>
+<p>Since as a group we had created a homepage, we each took on individual pages for our individual html assignment, creating the content for what would become our microsite. Putting together these individual pages, we then chose which design to move forward with. We chose Karla's design because she used most of the elements that aligned with our individual designs on one page: nav bar, side bar, color scheme, prominent graphic image.</p>
 </td></tr>
 <tr>
 <td colspan="2">
@@ -31,7 +31,7 @@ layout: base
 </tr>
 <tr>
 <td>
-<p>Each of us was tasked with creating page tables for the pages on the site and here are some examples of those tables. The page tables represent what we thought were the most important elements prioritized by importance. Home page table.</p>
+<p>Each of us was tasked with creating page tables for the site and here are some examples of those. The elements prioritized by importance show how we thought the pages would be displayed. This home page table was created using our mockup. We have changed the subject content and instead of using an updated post, we have made a mini sitemap that explains how to navigate our site. If this site is implemented, that can be changed to a post feature.</p>
 </td>
   <td>
 <figure><a href="images/homepage_table.pdf" title="Homepage Table PDF"><img src="images/homepage_table.png" alt="Homepage Table" width="400"></a>
