--- a/design.html
+++ b/design.html
@@ -34,7 +34,7 @@ layout: base
 <p>Each of us was tasked with creating page tables for the site and here are some examples of those. The elements prioritized by importance show how we thought the pages would be displayed. This home page table was created using our mockup. We have changed the subject content and instead of using an updated post, we have made a mini sitemap that explains how to navigate our site. If this site is implemented, that can be changed to a post feature.</p>
 </td>
   <td>
-<figure><a href="images/homepage_table.pdf" title="Homepage Table PDF"><img src="images/homepage_table.png" alt="Homepage Table" width="400"></a>
+<figure><a href="images/homepage_table.pdf" title="Homepage Table PDF"><img class="thumbnail" src="images/homepage_table.png" alt="Homepage Table" width="400"></a>
 <figcaption class="figure-caption text-center">Homepage Table <br/> Click on thumbnail to expand</figcaption>
 </figure>
 </td>
@@ -44,7 +44,7 @@ layout: base
 <p>This is the tutorial page table created by Katherine.</p>
 </td>
   <td>
-<figure><a href="images/printing_tutorial_Katherine.pdf" title="Printing Tutorial Table PDF"><img src="images/printing_tutorial_Katherine.png" alt="Printing Tutorial Page Table" width="400">
+<figure><a href="images/printing_tutorial_Katherine.pdf" title="Printing Tutorial Table PDF"><img class="thumbnail" src="images/printing_tutorial_Katherine.png" alt="Printing Tutorial Page Table" width="400">
 <figcaption class="figure-caption text-center">Printing Tutorial Page Table <br/> Click on thumbnail to expand</figcaption>
 </figure>
 </td>
@@ -54,7 +54,7 @@ layout: base
 <p>This is the FAQ page table created by Danielle. Initial priority 1 was achieved- page has list of questions and links to # on page for answer. Priority 2- live help was postponed due to time constraints in coding. Priority 3- common nav bar completed using Jekyll layout. Priority 4- hours completed, located in footer</p>
 </td>
   <td>
-<figure><a href="images/faq_Danielle.pdf" title="FAQ Page Table PDF"><img src="images/faq_Danielle.png" alt="FAQ Page Table PDF" width="400"></a>
+<figure><a href="images/faq_Danielle.pdf" title="FAQ Page Table PDF"><img class="thumbnail" src="images/faq_Danielle.png" alt="FAQ Page Table PDF" width="400"></a>
 <figcaption class="figure-caption text-center">FAQ Page Table<br/> Click on thumbnail to expand</figcaption>
 </figure>
 </td>
@@ -64,7 +64,7 @@ layout: base
 <p>This is the faculty page table created by April.</p>
 </td>
 <td>
-<figure><img src="images/facultypagetable.jpg" alt="Faculty Page Table" width="400">
+<figure><img class="thumbnail" src="images/facultypagetable.jpg" alt="Faculty Page Table" width="400">
 <figcaption class="figure-caption text-center">Faculty Page Table<br/> Click on thumbnail to expand</figcaption>
 </figure>
 </td>
@@ -74,7 +74,7 @@ layout: base
 <p>This is the appointment page table created by Karla.</p>
 </td>
   <td>
-<figure><a href="images/Make_appoinment_Karla.pdf" title="FAQ Page Table PDF"><img src="images/make_appointment_Karla.png" alt="Make an Appointment Page Table PDF" width="400"></a>
+<figure><a href="images/Make_appoinment_Karla.pdf" title="FAQ Page Table PDF"><img class="thumbnail" src="images/make_appointment_Karla.png" alt="Make an Appointment Page Table PDF" width="400"></a>
 <figcaption class="figure-caption text-center">Make an Appointment Page Table<br/> Click on thumbnail to expand</figcaption>
 </figure>
 </td>
