Deleted width inline element

--- a/design.html
+++ b/design.html
@@ -44,7 +44,7 @@ layout: base
 <p>This is the tutorial page table created by Katherine.</p>
 </td>
   <td>
-<figure><a href="images/printing_tutorial_Katherine.pdf" title="Printing Tutorial Table PDF"><img class="thumbnail" src="images/printing_tutorial_Katherine.png" alt="Printing Tutorial Page Table" width="400">
+<figure><a href="images/printing_tutorial_Katherine.pdf" title="Printing Tutorial Table PDF"><img class="thumbnail" src="images/printing_tutorial_Katherine.png" alt="Printing Tutorial Page Table">
 <figcaption class="figure-caption text-center">Printing Tutorial Page Table <br/> Click on thumbnail to expand</figcaption>
 </figure>
 </td>
@@ -54,7 +54,7 @@ layout: base
 <p>This is the FAQ page table created by Danielle. Initial priority 1 was achieved- page has list of questions and links to # on page for answer. Priority 2- live help was postponed due to time constraints in coding. Priority 3- common nav bar completed using Jekyll layout. Priority 4- hours completed, located in footer</p>
 </td>
   <td>
-<figure><a href="images/faq_Danielle.pdf" title="FAQ Page Table PDF"><img class="thumbnail" src="images/faq_Danielle.png" alt="FAQ Page Table PDF" width="400"></a>
+<figure><a href="images/faq_Danielle.pdf" title="FAQ Page Table PDF"><img class="thumbnail" src="images/faq_Danielle.png" alt="FAQ Page Table PDF"></a>
 <figcaption class="figure-caption text-center">FAQ Page Table<br/> Click on thumbnail to expand</figcaption>
 </figure>
 </td>
@@ -64,7 +64,7 @@ layout: base
 <p>This is the faculty page table created by April.</p>
 </td>
 <td>
-<figure><img class="thumbnail" src="images/facultypagetable.jpg" alt="Faculty Page Table" width="400">
+<figure><img class="thumbnail" src="images/facultypagetable.jpg" alt="Faculty Page Table">
 <figcaption class="figure-caption text-center">Faculty Page Table<br/> Click on thumbnail to expand</figcaption>
 </figure>
 </td>
@@ -74,7 +74,7 @@ layout: base
 <p>This is the appointment page table created by Karla.</p>
 </td>
   <td>
-<figure><a href="images/Make_appoinment_Karla.pdf" title="FAQ Page Table PDF"><img class="thumbnail" src="images/make_appointment_Karla.png" alt="Make an Appointment Page Table PDF" width="400"></a>
+<figure><a href="images/Make_appoinment_Karla.pdf" title="FAQ Page Table PDF"><img class="thumbnail" src="images/make_appointment_Karla.png" alt="Make an Appointment Page Table PDF"</a>
 <figcaption class="figure-caption text-center">Make an Appointment Page Table<br/> Click on thumbnail to expand</figcaption>
 </figure>
 </td>
