Added missing </a> tag

--- a/design.html
+++ b/design.html
@@ -44,7 +44,7 @@ layout: base
 <p>This is the tutorial page table created by Katherine.</p>
 </td>
   <td>
-<figure><a href="images/printing_tutorial_Katherine.pdf" title="Printing Tutorial Table PDF"><img class="thumbnail" src="images/printing_tutorial_Katherine.png" alt="Printing Tutorial Page Table">
+<figure><a href="images/printing_tutorial_Katherine.pdf" title="Printing Tutorial Table PDF"><img class="thumbnail" src="images/printing_tutorial_Katherine.png" alt="Printing Tutorial Page Table"></a>
 <figcaption class="figure-caption text-center">Printing Tutorial Page Table <br/> Click on thumbnail to expand</figcaption>
 </figure>
 </td>
