Added missing </a> tag

--- a/design.html
+++ b/design.html
@@ -74,7 +74,7 @@ layout: base
 <p>This is the appointment page table created by Karla.</p>
 </td>
   <td>
-<figure><a href="images/Make_appoinment_Karla.pdf" title="FAQ Page Table PDF"><img class="thumbnail" src="images/make_appointment_Karla.png" alt="Make an Appointment Page Table PDF"</a>
+<figure><a href="images/Make_appoinment_Karla.pdf" title="FAQ Page Table PDF"><img class="thumbnail" src="images/make_appointment_Karla.png" alt="Make an Appointment Page Table PDF"></a>
 <figcaption class="figure-caption text-center">Make an Appointment Page Table<br/> Click on thumbnail to expand</figcaption>
 </figure>
 </td>
