Deleted third align element

--- a/design.html
+++ b/design.html
@@ -13,7 +13,7 @@ layout: base
 
 <p>Since as a group we had created a homepage, we each took on individual pages for our individual html assignment, creating the content for what would become our microsite. Putting together these individual pages, we then chose which design to move forward with. We chose Karla's design because she used most of the elements that aligned with our individual designs on one page: nav bar, side bar, color scheme, prominent graphic image.</p>
 
-<figure><img src="images/indivcompilation.jpg" alt="individual html compilations" width="400" align="right"></figure>
+<figure><img src="images/indivcompilation.jpg" alt="individual html compilations" width="400"></figure>
 <br />
 
 <p>Each of us was tasked with creating page tables for the site and here are some examples of those. The elements prioritized by importance show how we thought the pages would be displayed.<p> 
