--- a/design.html
+++ b/design.html
@@ -5,11 +5,11 @@ layout: base
 <h2>Design and Progress</h2>
 <p>In week 8, our team put together individual mockups of how we envisioned the site. Using Slack and our Canvas group discussion board, we picked out the common elements among our individual designs to put together a group design.</p>
 
-<figure><img src="images/groupb_moodboard.jpg" alt="moodboard" width="400" align="right"></figure>
+<a href="images/groupb_moodboard.jpg"><figure><img src="images/groupb_moodboard.jpg" alt="Moodboard" width="400" align="right" padding="20px"></figure></a>
 
 <p>Using the common elements from our mockups, we narrowed the process to this mockup over the next few weeks choosing the persona of a student with casual language, but adding in an element for faculty because we did not believe only one persona would use the site.</p>
  
-<figure><img src="images/groupb_mockupblue.jpg" alt="mockup" width="400" align="right"></figure>
+<a href="images/groupb_mockupblue.jpg"><figure><img src="images/groupb_mockupblue.jpg" alt="mockup" width="400" align="right" padding="20px"></figure></a>
 
 <p>Since as a group we had created a homepage, we each took on individual pages for our individual html assignment, creating the content for what would become our microsite. Putting together these individual pages, we then chose which design to move forward with. We chose Karla's design because she used most of the elements that aligned with our individual designs on one page: nav bar, side bar, color scheme, prominent graphic image.</p>
 
