Added HTML pages image carousel

--- a/design.html
+++ b/design.html
@@ -13,7 +13,52 @@ layout: base
 
 <p>Since as a group we had created a homepage, we each took on individual pages for our individual html assignment, creating the content for what would become our microsite. Putting together these individual pages, we then chose which design to move forward with. We chose Karla's design because she used most of the elements that aligned with our individual designs on one page: nav bar, side bar, color scheme, prominent graphic image.</p>
 
-<figure><img src="images/indivcompilation.jpg" alt="individual html compilations" width="400"></figure>
+<-- ! Carousel -->
+ 
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+  </ol>
+ 
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <a href="images/april_html.png" title="April's HTML page"><img class="d-block w-100" src="images/april_html.png" alt="April's HTML with highlighted submenu"></a>
+     <h3>April's HTML Page</h3>
+     <p>Submenu options adapted to final design</p>
+    </div>
+   
+    <div class="carousel-item">
+     <a href="images/danielle_html.png" title="April's HTML page"><img class="d-block w-100" src="images/danielle_html.png" alt="Danielle's HTML with highlighted navigation bar"></a>
+    <h3>Danielle's HTML Page</h3>
+     <p>Navigation bar adapted to final design</p>
+    </div>
+   
+    <div class="carousel-item">
+     <a href="images/katherine_html.png" title="Katherine's HTML page"><img class="d-block w-100" src="images/katherine_html.png" alt="Katherine's HTML with highlighted image"></a>
+    <h3>Katherine's HTML Page</h3>
+     <p>Feature images adapted to final design</p>
+    </div>
+   
+    <div class="carousel-item">
+     <a href="images/karla_html.png" title="Karla's HTML page"><img class="d-block w-100" src="images/karla_html.png" alt="Karla's HTML with highlighted features"></a>
+    <h3>Karla's HTML Page</h3>
+     <p>Group elements adapted final Bootstrap design</p>
+    </div>
+   
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+ 
 <br />
 
 <p>Each of us was tasked with creating page tables for the site and here are some examples of those. The elements prioritized by importance show how we thought the pages would be displayed.<p> 
