Change carousel captions

--- a/design.html
+++ b/design.html
@@ -12,8 +12,6 @@ layout: base
 <a href="images/groupb_mockupblue.jpg"><figure><img src="images/groupb_mockupblue.jpg" alt="mockup" width="400" align="right"></figure></a>
 
 <p>Since as a group we had created a homepage, we each took on individual pages for our individual html assignment, creating the content for what would become our microsite. Putting together these individual pages, we then chose which design to move forward with. We chose Karla's design because she used most of the elements that aligned with our individual designs on one page: nav bar, side bar, color scheme, prominent graphic image.</p>
-
-<-- ! Carousel -->
  
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
@@ -25,28 +23,36 @@ layout: base
  
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <a href="images/april_html.png" title="April's HTML page"><img class="d-block w-100" src="images/april_html.png" alt="April's HTML with highlighted submenu"></a>
-     <h3>April's HTML Page</h3>
+     <a href="images/april_html.png" title="April's HTML page"><img class="d-block w-100" src="images/april_html.png" alt="April's HTML with highlighted submenu"></a>
+     <div class="carousel-caption d-none d-md-block">
+     <h4>April's HTML Page</h4>
      <p>Submenu options adapted to final design</p>
+     </div>
     </div>
    
     <div class="carousel-item">
      <a href="images/danielle_html.png" title="April's HTML page"><img class="d-block w-100" src="images/danielle_html.png" alt="Danielle's HTML with highlighted navigation bar"></a>
-    <h3>Danielle's HTML Page</h3>
+      <div class="carousel-caption d-none d-md-block">
+       <h4>Danielle's HTML Page</h4>
      <p>Navigation bar adapted to final design</p>
     </div>
+   </div>
    
     <div class="carousel-item">
      <a href="images/katherine_html.png" title="Katherine's HTML page"><img class="d-block w-100" src="images/katherine_html.png" alt="Katherine's HTML with highlighted image"></a>
-    <h3>Katherine's HTML Page</h3>
+      <div class="carousel-caption d-none d-md-block">
+       <h4>Katherine's HTML Page</h4>
      <p>Feature images adapted to final design</p>
     </div>
+   </div>
    
     <div class="carousel-item">
      <a href="images/karla_html.png" title="Karla's HTML page"><img class="d-block w-100" src="images/karla_html.png" alt="Karla's HTML with highlighted features"></a>
-    <h3>Karla's HTML Page</h3>
+      <div class="carousel-caption d-none d-md-block">
+       <h4>Karla's HTML Page</h4>
      <p>Group elements adapted final Bootstrap design</p>
     </div>
+   </div>
    
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
