Add section attributes

--- a/design.html
+++ b/design.html
@@ -73,7 +73,7 @@ layout: base
  
 <br />
 
-<p>Each of us was tasked with creating page tables for the site and here are some examples of those. The elements prioritized by importance show how we thought the pages would be displayed.<p> 
+<section><p>Each of us was tasked with creating page tables for the site and here are some examples of those. The elements prioritized by importance show how we thought the pages would be displayed.<p></section>
 <br />
 
 <table>
