--- a/design.html
+++ b/design.html
@@ -29,7 +29,7 @@ layout: base
  
   <div class="carousel-inner">
     <div class="carousel-item active">
-     <a href="images/april_html.png" title="April's HTML page"><img class="d-block h-300px" src="images/april_html.png" alt="April's HTML with highlighted submenu"></a>
+     <a href="images/april_html.png" title="April's HTML page"><img id="car_img" class="d-block w-100" src="images/april_html.png" alt="April's HTML with highlighted submenu"></a>
      <div class="carousel-caption d-none d-md-block">
      <h4>April's HTML Page</h4>
      <p>Submenu options adapted to final design</p>
@@ -37,7 +37,7 @@ layout: base
     </div>
    
     <div class="carousel-item">
-     <a href="images/danielle_html.png" title="April's HTML page"><img class="d-block h-300px" src="images/danielle_html.png" alt="Danielle's HTML with highlighted navigation bar"></a>
+     <a href="images/danielle_html.png" title="April's HTML page"><img id="car_img" class="d-block w-100" src="images/danielle_html.png" alt="Danielle's HTML with highlighted navigation bar"></a>
       <div class="carousel-caption d-none d-md-block">
        <h4>Danielle's HTML Page</h4>
      <p>Navigation bar adapted to final design</p>
@@ -45,7 +45,7 @@ layout: base
    </div>
    
     <div class="carousel-item">
-     <a href="images/katherine_html.png" title="Katherine's HTML page"><img class="d-block h-300px" src="images/katherine_html.png" alt="Katherine's HTML with highlighted image"></a>
+     <a href="images/katherine_html.png" title="Katherine's HTML page"><img id="car_img" class="d-block w-100" src="images/katherine_html.png" alt="Katherine's HTML with highlighted image"></a>
       <div class="carousel-caption d-none d-md-block">
        <h4>Katherine's HTML Page</h4>
      <p>Feature images adapted to final design</p>
@@ -53,7 +53,7 @@ layout: base
    </div>
    
     <div class="carousel-item">
-     <a href="images/karla_html.png" title="Karla's HTML page"><img class="d-block h-300px" src="images/karla_html.png" alt="Karla's HTML with highlighted features"></a>
+     <a href="images/karla_html.png" title="Karla's HTML page"><img id="car_img" class="d-block w-100" src="images/karla_html.png" alt="Karla's HTML with highlighted features"></a>
       <div class="carousel-caption d-none d-md-block">
        <h4>Karla's HTML Page</h4>
      <p>Group elements adapted final Bootstrap design</p>
