Fixed errors and added h4 tags

--- a/design.html
+++ b/design.html
@@ -3,6 +3,7 @@ layout: base
 ---
 
 <h2>Design and Progress</h2>
+<h4>Design Prototypes and Mockups</h4>
 <a href="images/groupb_moodboard.jpg"><figure><img src="images/groupb_moodboard.jpg" alt="Moodboard" width="400" align="right"></figure></a>
 
 <p>In week 8, our team put together individual mockups of how we envisioned the site. Using Slack and our Canvas group discussion board, we picked out the common elements among our individual designs to put together a group design.</p>
@@ -14,7 +15,7 @@ layout: base
 
 <p>Since as a group we had created a homepage, we each took on individual pages for our individual html assignment, creating the content for what would become our microsite. Putting together these individual pages, we then chose which design to move forward with. We chose Karla's design because she used most of the elements that aligned with our individual designs on one page: nav bar, side bar, color scheme, prominent graphic image.</p>
 
-</section
+</section>
 
 <br />
 <br />
@@ -29,7 +30,7 @@ layout: base
  
   <div class="carousel-inner">
     <div class="carousel-item active">
-     <a href="images/april_html.png" title="April's HTML page"><img id="car_img" class="d-block w-100" src="images/april_html.png" alt="April's HTML with highlighted submenu"></a>
+     <a href="images/april_html.png" title="April's HTML page"><img class="d-block w-100" src="images/april_html.png" alt="April's HTML with highlighted submenu"></a>
      <div class="carousel-caption d-none d-md-block">
      <h4>April's HTML Page</h4>
      <p>Submenu options adapted to final design</p>
@@ -37,7 +38,7 @@ layout: base
     </div>
    
     <div class="carousel-item">
-     <a href="images/danielle_html.png" title="April's HTML page"><img id="car_img" class="d-block w-100" src="images/danielle_html.png" alt="Danielle's HTML with highlighted navigation bar"></a>
+     <a href="images/danielle_html.png" title="April's HTML page"><img class="d-block w-100" src="images/danielle_html.png" alt="Danielle's HTML with highlighted navigation bar"></a>
       <div class="carousel-caption d-none d-md-block">
        <h4>Danielle's HTML Page</h4>
      <p>Navigation bar adapted to final design</p>
@@ -45,7 +46,7 @@ layout: base
    </div>
    
     <div class="carousel-item">
-     <a href="images/katherine_html.png" title="Katherine's HTML page"><img id="car_img" class="d-block w-100" src="images/katherine_html.png" alt="Katherine's HTML with highlighted image"></a>
+     <a href="images/katherine_html.png" title="Katherine's HTML page"><img class="d-block w-100" src="images/katherine_html.png" alt="Katherine's HTML with highlighted image"></a>
       <div class="carousel-caption d-none d-md-block">
        <h4>Katherine's HTML Page</h4>
      <p>Feature images adapted to final design</p>
@@ -53,7 +54,7 @@ layout: base
    </div>
    
     <div class="carousel-item">
-     <a href="images/karla_html.png" title="Karla's HTML page"><img id="car_img" class="d-block w-100" src="images/karla_html.png" alt="Karla's HTML with highlighted features"></a>
+     <a href="images/karla_html.png" title="Karla's HTML page"><img class="d-block w-100" src="images/karla_html.png" alt="Karla's HTML with highlighted features"></a>
       <div class="carousel-caption d-none d-md-block">
        <h4>Karla's HTML Page</h4>
      <p>Group elements adapted final Bootstrap design</p>
@@ -73,6 +74,7 @@ layout: base
  
 <br />
 
+<h4>Content Strategy: Page Tables</h4>
 <section><p>Each of us was tasked with creating page tables for the site and here are some examples of those. The elements prioritized by importance show how we thought the pages would be displayed.<p></section>
 <br />
 
