Added mood class

--- a/design.html
+++ b/design.html
@@ -4,11 +4,11 @@ layout: base
 
 <h2>Design and Progress</h2>
 <h4>Design Prototypes and Mockups</h4>
-<a href="images/groupb_moodboard.jpg"><figure><img src="images/groupb_moodboard.jpg" alt="Moodboard" width="400"></figure></a>
+<a href="images/groupb_moodboard.jpg"><figure><img class="mood" src="images/groupb_moodboard.jpg" alt="Moodboard" width="400"></figure></a>
 
 <p>In week 8, our team put together individual mockups of how we envisioned the site. Using Slack and our Canvas group discussion board, we picked out the common elements among our individual designs to put together a group design.</p>
 
-<a href="images/groupb_mockupblue.jpg"><figure><img src="images/groupb_mockupblue.jpg" alt="mockup" width="400"></figure></a>
+<a href="images/groupb_mockupblue.jpg"><figure><img class="mood" src="images/groupb_mockupblue.jpg" alt="mockup" width="400"></figure></a>
 
 <section>
  <p>Using the common elements from our mockups, we narrowed the process to this mockup over the next few weeks choosing the persona of a student with casual language, but adding in an element for faculty because we did not believe only one persona would use the site.</p>
