--- a/design.html
+++ b/design.html
@@ -4,19 +4,16 @@ layout: base
 
 <h2>Design and Progress</h2>
 <h4>Design Prototypes and Mockups</h4>
-<a href="images/groupb_moodboard.jpg"><figure><img class="mood" src="images/groupb_moodboard.jpg" alt="Moodboard" width="400"></figure></a>
+<a href="images/groupb_moodboard.jpg" title="moodboard"><figure><img class="mood" src="images/groupb_moodboard.jpg" alt="Moodboard" width="400"></figure></a>
 
 <p>In week 8, our team put together individual mockups of how we envisioned the site. Using Slack and our Canvas group discussion board, we picked out the common elements among our individual designs to put together a group design.</p>
 
 <a href="images/groupb_mockupblue.jpg"><figure><img class="mood" src="images/groupb_mockupblue.jpg" alt="mockup" width="400"></figure></a>
 
-<section>
- <p>Using the common elements from our mockups, we narrowed the process to this mockup over the next few weeks choosing the persona of a student with casual language, but adding in an element for faculty because we did not believe only one persona would use the site.</p>
-
+<p>Using the common elements from our mockups, we narrowed the process to this mockup over the next few weeks choosing the persona of a student with casual language, but adding in an element for faculty because we did not believe only one persona would use the site.</p>
 <p>Since as a group we had created a homepage, we each took on individual pages for our individual html assignment, creating the content for what would become our microsite. Putting together these individual pages, we then chose which design to move forward with. We chose Karla's design because she used most of the elements that aligned with our individual designs on one page: nav bar, side bar, color scheme, prominent graphic image.</p>
 
-</section>
-
+<section id="designcarousel">
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -68,13 +65,11 @@ layout: base
     <span class="sr-only">Next</span>
   </a>
 </div>
- 
-<br />
+</section>
 
 <h4>Content Strategy: Page Tables</h4>
 
-<section><p>Each of us was tasked with creating page tables for the site and here are some examples of those. The elements prioritized by importance show how we thought the pages would be displayed.<p></section>
-<br />
+<p>Each of us was tasked with creating page tables for the site and here are some examples of those. The elements prioritized by importance show how we thought the pages would be displayed.</p>
 
 <table>
 <tr>
@@ -93,7 +88,7 @@ layout: base
 </td>
   <td>
 <figure><a href="images/printing_tutorial_Katherine.pdf" title="Printing Tutorial Table PDF"><img class="thumbnail" src="images/printing_tutorial_Katherine.png" alt="Printing Tutorial Page Table"></a>
-<figcaption class="figure-caption text-center">Printing Tutorial Page Table <br/> Click on thumbnail to expand</figcaption>
+<figcaption class="figure-caption text-center">Printing Tutorial Page Table <br> Click on thumbnail to expand</figcaption>
 </figure>
 </td>
 </tr>
@@ -103,7 +98,7 @@ layout: base
 </td>
   <td>
 <figure><a href="images/faq_Danielle.pdf" title="FAQ Page Table PDF"><img class="thumbnail" src="images/faq_Danielle.png" alt="FAQ Page Table PDF"></a>
-<figcaption class="figure-caption text-center">FAQ Page Table<br/> Click on thumbnail to expand</figcaption>
+<figcaption class="figure-caption text-center">FAQ Page Table<br> Click on thumbnail to expand</figcaption>
 </figure>
 </td>
 </tr>
@@ -112,8 +107,8 @@ layout: base
 <p>This is the faculty page table created by April.</p>
 </td>
 <td>
-<figure><img class="thumbnail" src="images/facultypagetable.jpg" alt="Faculty Page Table">
-<figcaption class="figure-caption text-center">Faculty Page Table<br/> Click on thumbnail to expand</figcaption>
+<figure><a href="images/faculty_April.pdf" title="Faculty Page Table PDF"><img class="thumbnail" src="images/facultypagetable.png" alt="Faculty Page Table"></a>
+<figcaption class="figure-caption text-center">Faculty Page Table<br> Click on thumbnail to expand</figcaption>
 </figure>
 </td>
 </tr>
@@ -123,13 +118,14 @@ layout: base
 </td>
   <td>
 <figure><a href="images/Make_appoinment_Karla.pdf" title="FAQ Page Table PDF"><img class="thumbnail" src="images/make_appointment_Karla.png" alt="Make an Appointment Page Table PDF"></a>
-<figcaption class="figure-caption text-center">Make an Appointment Page Table<br/> Click on thumbnail to expand</figcaption>
+<figcaption class="figure-caption text-center">Make an Appointment Page Table<br> Click on thumbnail to expand</figcaption>
 </figure>
 </td>
 </tr>
 </table>
-<br/>
-<br/>
+<br>
+<br>
+
 <p>We used existing text and images from the original Dominican University 3D printing libguide to help make up the content, but the majority of the website did require additional research, images, and text creation. We evaluated other 3D printing websites for best techniques before putting together our final project.<br>
   <figure><img src="https://c2.staticflickr.com/6/5635/21897207251_17580a4e0c_b.jpg" alt="flashforge orange printing example" width="576"></figure></p>
 <p>We put together a usability study on our website and tested it with a random sample of people (minimum of 4).</p>
