--- a/design.html
+++ b/design.html
@@ -126,6 +126,6 @@ layout: base
 <br>
 <br>
 
-<p>We used existing text and images from the original Dominican University 3D printing libguide to help make up the content, but the majority of the website did require additional research, images, and text creation. We evaluated other 3D printing websites for best techniques before putting together our final project.<br>
-  <figure><img src="https://c2.staticflickr.com/6/5635/21897207251_17580a4e0c_b.jpg" alt="flashforge orange printing example" width="576"></figure></p>
+<p>We used existing text and images from the original Dominican University 3D printing libguide to help make up the content, but the majority of the website did require additional research, images, and text creation. We evaluated other 3D printing websites for best techniques before putting together our final project.</p>
+  <figure><img src="https://c2.staticflickr.com/6/5635/21897207251_17580a4e0c_b.jpg" alt="flashforge orange printing example" width="576"></figure>
 <p>We put together a usability study on our website and tested it with a random sample of people (minimum of 4).</p>
