--- a/design.html
+++ b/design.html
@@ -84,7 +84,7 @@ layout: base
 </tr>
 <tr>
 <td>
-<p>This is the tutorial page table created by Katherine.</p>
+<p>This is the tutorial page table created by Katherine. All priorities executed as planned.</p>
 </td>
   <td>
 <figure><a href="images/printing_tutorial_Katherine.pdf" title="Printing Tutorial Table PDF"><img class="thumbnail" src="images/printing_tutorial_Katherine.png" alt="Printing Tutorial Page Table"></a>
@@ -94,7 +94,7 @@ layout: base
 </tr>
 <tr>
 <td>
-<p>This is the FAQ page table created by Danielle. Initial priority 1 was achieved- page has list of questions and links to # on page for answer. Priority 2- live help was postponed due to time constraints in coding. Priority 3- common nav bar completed using Jekyll layout. Priority 4- hours completed, located in footer</p>
+<p>This is the FAQ page table created by Danielle. Priority 1 achieved- page has list of questions and links to # on page for answer. Priority 2 changed- live help in aside was postponed due to time constraints in coding. Priority 3 achieved- common nav bar completed using Jekyll layout. Priority 4 achieved- hours completed, located in footer.</p>
 </td>
   <td>
 <figure><a href="images/faq_Danielle.pdf" title="FAQ Page Table PDF"><img class="thumbnail" src="images/faq_Danielle.png" alt="FAQ Page Table PDF"></a>
@@ -114,7 +114,7 @@ layout: base
 </tr>
 <tr>
 <td>
-<p>This is the appointment page table created by Karla.</p>
+<p>This is the appointment page table created by Karla. Priority 1 achieved- additional fields added. Priority 2 changed- Gallery added to Jekyll layout. Social media accounts not created; could be added to aside or footer if site is implemented in future.</p>
 </td>
   <td>
 <figure><a href="images/Make_appoinment_Karla.pdf" title="FAQ Page Table PDF"><img class="thumbnail" src="images/make_appointment_Karla.png" alt="Make an Appointment Page Table PDF"></a>
