--- a/makeanappointment.html
+++ b/makeanappointment.html
@@ -29,19 +29,19 @@ layout: base
 
   <div class="form-group col-md-6">
      <label for="inputTime">Time</label>
-      <select id="inputTime" class="form-control">
+      <select id="inputTime" name="time" class="form-control">
         <option selected>Choose...</option>
-        <option>8:00 am</option>
-        <option>9:00 am</option>
-        <option>10:00 am</option>
-        <option>11:00 am</option>
-        <option>12:00 pm</option>
-        <option>1:00 pm</option>
-        <option>2:00 pm</option>
-        <option>3:00 pm</option>
-        <option>4:00 pm</option>
-        <option>5:00 pm</option>
-        <option>6:00 pm</option>
+        <option value="8am">8:00 am</option>
+        <option value="9am">9:00 am</option>
+        <option value="10am">10:00 am</option>
+        <option value="11am">11:00 am</option>
+        <option value="12pm">12:00 pm</option>
+        <option value="1pm">1:00 pm</option>
+        <option value="2pm">2:00 pm</option>
+        <option value="3pm">3:00 pm</option>
+        <option value="4pm">4:00 pm</option>
+        <option value="5pm">5:00 pm</option>
+        <option value="6pm">6:00 pm</option>
       </select>
     </div>
     </div>
