--- a/makeanappointment.html
+++ b/makeanappointment.html
@@ -75,7 +75,7 @@ layout: base
       </form>
 
 <!--Below is code to validate the script and prevent hacked entries-->
-      <script language="JavaScript">
+      <script language="JavaScript"  src="scripts/gen_validatorv31.js" type="text/javascript">
     // Code for validating the form
     // Visit http://www.javascript-coder.com/html-form/javascript-form-validation.phtml
     // for details
