--- a/makeanappointment.html
+++ b/makeanappointment.html
@@ -79,7 +79,7 @@ layout: base
     // Code for validating the form
     // Visit http://www.javascript-coder.com/html-form/javascript-form-validation.phtml
     // for details
-    var frmvalidator  = new Validator("myemailform");
+    var frmvalidator  = new Validator("3Dprintingappt");
     frmvalidator.addValidation("name","req","Please provide your name"); 
     frmvalidator.addValidation("email","req","Please provide your email"); 
     frmvalidator.addValidation("email","email","Please enter a valid email address"); 
