--- a/makeanappointment.html
+++ b/makeanappointment.html
@@ -47,7 +47,7 @@ layout: base
     </div>
           
         <div class="row">
-      <legend class="col-form-label col-4 pt-0">Is your design course work?</legend>
+      <div class="col-form-label col-4 pt-0">Is your design course work?</div>
       <div class="col-sm">
         <div class="form-check">
           <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>
